Fix vertical-alignment of if-statements within other expressions (ifs and lets)

--- a/server/static/base.less
+++ b/server/static/base.less
@@ -248,6 +248,10 @@ body {
 
   div {
     .layout-inline;
+    vertical-align: top;
+    .entry {
+      vertical-align: baseline;
+    }
   }
 
   .letexpr > .letbody {
@@ -321,7 +325,6 @@ body {
   }
 
   .threadexpr {
-    vertical-align: top;
     .threadmember {
       .layout-block;
 
@@ -329,9 +332,6 @@ body {
         .thread.pipe {
           display: none;
         }
-      }
-      .thread.pipe {
-        vertical-align: top;
       }
     }
   }
